--- a/src/app/components/skeleton/skeleton.component.html
+++ b/src/app/components/skeleton/skeleton.component.html
@@ -181,7 +181,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <mat-card-content>
             <!-- Statement markup -->
-            <div class="statement">
+            <div #statement class="statement" >
               <ul>
                 <li><strong>Claimant/Source</strong> (who made the statement): {{document.claimant}}</li>
                 <li><strong>Date</strong> (when the statement was made): {{document.date}}</li>
