--- a/src/app/components/skeleton/skeleton.component.scss
+++ b/src/app/components/skeleton/skeleton.component.scss
@@ -137,6 +137,7 @@ mat-card-content label {
   background-color: #F0F0F0	;
   position:sticky;
   top: 42px;
+  text-align: center;
   z-index: 1000;
 }
 
@@ -533,3 +534,4 @@ mat-form-field {
   flex: 1 1 0px;
   padding: 1%;
 }
+
